413330  avx-1 test fails on AMD EPYC 7401P 24-Core Processor
413603  callgrind_annotate/cg_annotate truncate function names at '#'
414565  Specific use case bug found in SysRes VG_(do_sys_sigprocmask)
415136  ARMv8.1 Compare-and-Swap instructions are not supported
415757  vex x86->IR: 0x66 0xF 0xCE 0x4F (bswapw)
416239  valgrind crashes when handling clock_adjtime
416286  DRD reports "conflicting load" error on std::mutex::lock()
416301  s390x: "compare and signal" not supported
416387  finit_module and bpf syscalls are unhandled on arm64
416464  Fix false reports for uninitialized memory for PR_CAPBSET_READ/DROP
416667  gcc10 ppc64le impossible constraint in 'asm' in test_isa.
416753  new 32bit time syscalls for 2038+
417187  [MIPS] Conditional branch problem since 'grail' changes
417238  Test memcheck/tests/vbit-test fails on mips64 BE
417266  Make memcheck/tests/linux/sigqueue usable with musl
417281  s390x: /bin/true segfaults with "grail" enabled
417427  commit to fix vki_siginfo_t definition created numerous regression
        errors on ppc64
417452  s390_insn_store_emit: dst->tag for HRcVec128
417578  Add suppressions for glibc DTV leaks
417906  clone with CLONE_VFORK and no CLONE_VM fails
418435  s390x: memcmp test yields extra "Conditional jump or move depends on
        uninitialised value(s)"
417281  s390x: /bin/true segfaults with "grail" enabled
n-i-bz  Fix minor one time leaks in dhat.
n-i-bz  Add --run-cxx-freeres=no in outer args to avoid inner crashes.
n-i-bz  Add support for the Linux io_uring system calls
n-i-bz  sys_statx: don't complain if both |filename| and |buf| are NULL.
n-i-bz  Fix non-glibc build of test suite with s390x_features
418004  Grail code additions break ppc64.
418435  s390x: spurious "Conditional jump or move depends on uninitialised [..]"
418997  s390x: Support Iex_ITE for float and vector types
419503  s390x: Avoid modifying registers returned from isel functions


Release 3.15.0 (12 April 2019)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~